# big-data-interactive-ads

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
analyse/: ad_decisions_analysis.ipynb
docs/: architecture.md  konspekt.tex
hbase/: setup_air_quality_table.py  setup_hbase.py  setup_sentiment_table.py  setup_transport_table.py  setup_weather_table.py
kafka/: setup_kafka.py  setup_kafka_topics.py
nifi/: nifi_template_v1.xml  setup_nifi.py
scripts/: current_setup_windows.ps1  restart_all.ps1  restart_all.sh  run_nifi_flows.ps1  run_nifi_flows.sh  run_spark_jobs.ps1  run_spark_jobs.sh  setup_all.py  stop_nifi_flows.ps1  stop_nifi_flows.sh  stop_spark_jobs.ps1  stop_spark_jobs.sh
spark/: Dockerfile  ad_campaign_manager.py  archive_scheduler.py  archive_to_hive.py  consume_air_quality_to_hbase.py  consume_buses_to_hbase.py  consume_sentiment_to_hbase.py  consume_trolleys_to_hbase.py  consume_weather_to_hbase.py  query_archive.py
tests/: twitter_api.py  twitter_search_scenarios.py
